--- a/Code/style.css
+++ b/Code/style.css
@@ -6,23 +6,21 @@
     font-family: Inter;
 }
 h1{
-    position: absolute;
-    width: 525px;
-    height: 127px;
-    left: 313px;
-    top: 386px;
+    margin-top: 180;
+    font-size: 128px;
+    margin-left: 313;
+    font-weight: 400;
+    line-height: 154.91px;
 }
 
 h2{
-    position: absolute;
-    width: 598px;
-    height: 245.03px;
-    left: 1074px;
-    top: 356px;
+    margin-right: 356;
+    background-color: #FED979;
+    padding: 15px;
+    border-radius: 20px;
 }
 
 .main{
-    background-color: #F4AF47;
     color: black;
 }
 
@@ -31,39 +29,47 @@ h2{
     display:flex;
     margin: auto;
     padding: 15px 0;
-    align-items: center;
     justify-content: space-between;
 }
 
 .navbar .logo{
-    width: 120px;
+    width: 125px;
+    background-color: #FED979;
     cursor: pointer;
     margin-top: 1%;
-    margin-left: -2%;
+    margin-left: 2%;
+    border-radius: 110px;
+    
 }
 
 ul li{
-    list-style-type: none;
-    display: inline-block;
-    padding: 10px 16px;
+    display: inline;
 }
 
 ul li a{
-    font-size: 16px;
-    font-weight: bold;
+    width: 615px;
+    height: 66px;
+    left: 1207px;
+    top: 115px;
+    font-size: 22px;
+    font-weight: 400;
     text-decoration: none;
     color: black;
     margin-top:-1;
-    transition: .5s ease;
+    transition: .2s ease;
+    background-color: #FED979;
+    border-radius: 20px;
 }
 
 ul li a:hover{
     color: white;
-    font-size: 15px;
+    font-size: 21px;
+    background-color: #000000;
 }
 
 .def{
-    margin-top: -8%;
+    margin-top: -9%;
     padding-left: 50%;
     align-items: center;
+    text-align: justify;
 }
