--- a/Code/style.css
+++ b/Code/style.css
@@ -15,7 +15,8 @@ h1{
 
 h2{
     margin-right: 356;
-    background-color: #FED979;
+    /* background-color: #FED979; */
+    
     padding: 15px;
     border-radius: 20px;
 }
@@ -68,8 +69,19 @@ ul li a:hover{
 }
 
 .def{
+  
     margin-top: -9%;
     padding-left: 50%;
     align-items: center;
     text-align: justify;
+    
+}
+.vertical {
+    margin-left: -86px;
+    margin-top: 16px;
+    border-left: 6px solid black;
+    height: 200px;
+    position:absolute;
+    left: 50%;
+    padding-left: 0px;
 }
