--- a/Code/style.css
+++ b/Code/style.css
@@ -21,12 +21,12 @@ h2{
 
 
 .main{
+    position: relative;
     color: black;
 }
 
 .navbar{
     width: 75%;
-    height: 10%;
     margin-left: 200px;
     display:flex;
     margin-top: 20px;
@@ -54,7 +54,8 @@ ul li a{
     width: 615px;
     height: 66px;
     left: 1207px;
-    top: 130px;
+    top: 150px;
+    margin-top: 2%;
     font-size: 22px;
     font-weight: 400;
     text-decoration: none;
@@ -69,24 +70,6 @@ ul li a:hover{
     color: white;
     font-size: 21px;
     background-color: #000000;
-}
-
-.def{
-  
-    margin-top: -9%;
-    padding-left: 50%;
-    align-items: center;
-    text-align: justify;
-    
-}
-.vertical {
-        margin-left: 100px;
-        margin-top: 50px;
-        border-left: 6px solid black;
-        height: 224px;
-        position: absolute;
-        left: 50%;
-        padding-left: 0px;
 }
 
 td{
@@ -105,7 +88,7 @@ span{
     padding-top: 150px;
 }
 
-hr.line{
+.line{
     margin-top: 80px;
     border: none;
     border-top: 2px solid black;
@@ -119,10 +102,4 @@ hr.line{
     background-color:#a99f911f;
     border-left: #000000;
     border-left-style: solid;
-}
-
-@media (max-width: 300px) {
-    .vertical{
-        color: blue;
-    }
 }
