--- a/Code/style2.0.css
+++ b/Code/style2.0.css
@@ -61,7 +61,7 @@
     font-size: 54px;
 }
 
-.port::first-letter{
+.port:first-letter{
     font-size: 160px;
     margin: -1.5%;
 }
@@ -69,7 +69,7 @@
 .desc{
     width: 545px;
     height: 20px;
-    margin-top: 2%;
+    margin-top: 1%;
     justify-content: center;
     border-radius: 15%;
 }
@@ -95,38 +95,32 @@ hr{
 }
 
 /*push part section*/
-.push {
+
+.push h2{
+    text-decoration: underline;
+
+}
+
+.push{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    justify-content: space-between;
-    align-items: flex-start;
-    left: 5%;;
-    padding: 5%;
-  }
+    margin-left: 10%;    
+    justify-content: space-around;
+    font-size: 26px;
+    gap: 30%;
+}
   
-  .push_right dl {
-    margin-right: 5%;
-    grid-area: push;
-  }
+.edu{
+
+}
   
-  .push_right dl:first-child {
-    margin-top: 0;
-  }
+.exp{
+
+}
   
-  .push_right dl:not(:first-child) {
-    margin-top: 3%;
-  }
-  
-  .desc li {
-    font-size: 20px;
-    list-style: none;
-    margin-bottom: 2%;
-  }
-  
-  
-  
-  
-  
+.skill{
+    margin-top: 7%;
+}
   
   
 
