--- a/Code/style2.0.css
+++ b/Code/style2.0.css
@@ -68,10 +68,11 @@
 
 .desc{
     width: 545px;
-    height: 20px;
+
     margin-top: 1%;
     justify-content: center;
     border-radius: 15%;
+    max-height: 20px;
 }
 
 .desc p{
