--- a/Code/style2.0.css
+++ b/Code/style2.0.css
@@ -168,7 +168,7 @@ hr{
 
 /*Footer*/
 .foot{
-    display: flex;
+    display: grid;
     grid-gap: 10px;
     grid-template-columns: 2fr 1fr;
     grid-template-areas:
