--- a/style2.0.css
+++ b/style2.0.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    background-image: url("/Code/UI/yellowbg.jpeg");
+    background-image: url("/Code/UI/yellowbg.JPEG");
     max-height: fit-content;
 }
 
