--- a/Code/style2.1.css
+++ b/Code/style2.1.css
@@ -1,9 +1,10 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.19.3/inter.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.19.3/inter.min.css");
+@import url('https://fonts.cdnfonts.com/css/bebas-neue?styles=17623,17625,17621,17624,17622,17620');
 
 *{
     color:black;
-    font-family: Inter;
+    font-family: 'Bebas Neue', sans-serif;
     padding: 3px;
 }
 
