--- a/style2.0.css
+++ b/style2.0.css
@@ -1,9 +1,11 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.19.3/inter.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/inter-ui/3.19.3/inter.min.css");
+@import url('https://fonts.cdnfonts.com/css/bebas-neue?styles=17623,17625,17621,17624,17622,17620');
+@import url("https://www.dafontfree.net/embed/bmljby1tb2ppLXJlZ3VsYXImZGF0YS80Mzkvbi8xNzk4MDkvTmljb01vamktUmVndWxhci50dGY");
 
 *{
     color:black;
-    font-family: Inter;
+    font-family: 'Bebas Neue', sans-serif;                                              
     padding: 3px;
 }
 
@@ -89,6 +91,7 @@ body{
 .port{
     font-size: 54px;
     text-shadow: 7px 10px 10px darkorange;
+    font-family: 'nico-moji-regular', sans-serif;
     
 }
 
